--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,134 +1,42 @@
-name: unit-tests
+name: CI
 on:
-  pull_request:
-    branches:
-      - 'dev*'
-      - 'releases/v*'
   push:
-    branches:
-      - 'dev*'
-    tags-ignore:
-      - '*.*'
+    branches: [ main ]
+
 jobs:
-  unit-tests:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 'v20.10.0'
-          registry-url: 'https://registry.npmjs.org'
-
-      - name: Install Yarn
-        run: npm install -g yarn
-
-      - name: Install and Test
-        run: |
-          yarn install --frozen-lockfile
-          yarn lint:check
-          yarn lint:format:check
-          yarn test
-
-      - name: Uploade CodeCov Report
-        uses: codecov/codecov-action@v4.1.1
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v2
 
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 'v20.10.0'
-          registry-url: 'https://registry.npmjs.org'
-
-      - name: Install Yarn
-        run: npm install -g yarn
-
-      - name: Build lib
+      used to cache dependencies with a timeout
+      - name: Get Date
+        id: get-date
         run: |
-          yarn install --frozen-lockfile
-          yarn build
+          echo "::set-output name=date::$(/bin/date -u "+%Y%m%d")"
+        shell: bash
 
-      - name: Rebuild production node_modules
-        run: |
-          yarn install --production --frozen-lockfile
-          ls node_modules
-
-      - name: artifact
-        uses: actions/upload-artifact@v3
+      - name: Cache Buildozer global directory
+        uses: actions/cache@v2
         with:
-          name: dist
-          path: |
-            lib
-            node_modules
+          path: .buildozer_global
+          key: buildozer-global-${{ hashFiles('buildozer.spec') }} # Replace with your path
 
-  integration:
-    runs-on: ubuntu-latest
-    needs: build
-    strategy:
-      matrix:
-        branch: ['gh-pages', 'no-pages']
-        commit: ['singleCommit', 'add commits']
-      max-parallel: 1
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/cache@v2
         with:
-          persist-credentials: false
+          path: .buildozer
+          key: ${{ runner.os }}-${{ steps.get-date.outputs.date }}-${{ hashFiles('buildozer.spec') }}
 
-      - uses: actions/setup-node@v4
+      - name: Build with Buildozer
+        uses: ArtemSBulgakov/buildozer-action@v1
+        id: buildozer
         with:
-          node-version: 'v20.10.0'
-          registry-url: 'https://registry.npmjs.org'
+          command: buildozer android debug
+          buildozer_version: stable
 
-      - name: Download artifact
-        uses: actions/download-artifact@v3
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v2
         with:
-          name: dist
-
-      - name: Deploy
-        id: unmodified
-        uses: ./
-        with:
-          folder: integration
-          branch: ${{ matrix.branch }}
-          single-commit: ${{ matrix.commit == 'singleCommit' }}
-          dry-run: true
-
-      # Usually, this should be skipped, but if the upstream gh-pages
-      # branch doesn't match ours, it should still be a success.
-      - name: Check step output
-        run: |
-          [[ \
-          ${{steps.unmodified.outputs.deployment-status}} = skipped || \
-          ${{steps.unmodified.outputs.deployment-status}} = success \
-          ]]
-
-      - name: Tweak content to publish to existing branch
-        if: ${{ matrix.branch == 'gh-pages' }}
-        run: |
-          echo "<!-- just sayin -->" >> integration/index.html
-
-      - name: Deploy with modifications to existing branch
-        id: modified
-        uses: ./
-        if: ${{ matrix.branch == 'gh-pages' }}
-        with:
-          folder: integration
-          branch: ${{ matrix.branch }}
-          single-commit: ${{ matrix.commit == 'singleCommit' }}
-          dry-run: true
-
-      # The modified deployment should be a success, and not skipped.
-      - name: Check step output
-        if: ${{ matrix.branch == 'gh-pages' }}
-        run: |
-          [[ \
-          ${{steps.modified.outputs.deployment-status}} = success \
-          ]]
+          name: package
+          path: ${{ steps.buildozer.outputs.filename }}
